<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>

    <!-- Settings Menu Item -->
    <string name="settings_menu_Item">Settings</string>

    <!-- Settings Activity Title -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings for min mag preference -->
    <string name="settings_min_mag_label">Mininum Magnitude</string>
    <string name="settings_min_mag_key" translatable="false">min_magnitude</string>
    <string name="settings_min_mag_default" translatable="false">6</string>

    <!-- Strings for Order By preference -->
    <string name="settings_order_label">Order By</string>
    <string name="settings_order_key" translatable="false">order_by</string>
    <string name="settings_order_default" translatable="false">@string/settings_order_mag_value</string>

    <!-- Label for order by mag option char limit = 20 -->
    <string name="settings_order_mag_label">Magnitude</string>
    <string name="settings_order_mag_value" translatable="false">magnitude</string>

    <!-- Label for order by most recent option, char limit = 20 -->
    <string name="settings_order_most_recent_label">Most Recent</string>
    <string name="settings_order_most_recent_value" translatable="false">time</string>
</resources>
