<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_default"
        android:entries="@array/settings_order_labels"
        android:entryValues="@array/settings_order_values"
        android:key="@string/settings_order_key"
        android:title="@string/settings_order_label">
    </ListPreference>

    <EditTextPreference
        android:defaultValue="@string/settings_min_mag_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_mag_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_mag_label">
    </EditTextPreference>

</PreferenceScreen>